--- a/index.html
+++ b/index.html
@@ -350,9 +350,7 @@
       <div class="product-info">
         <h3>Led Mirror 2.2</h3>
         <p>Condition: Excellent</p>
-        <div class="price">₹2999.99</div>
-        <a href="https://wa.me/9871486231?text=I%20am%20interested%20in%20Led%20Mirror%202.2%20from%20Glowsy%20Galaxy%20Shop"
-           class="btn">Buy Now</a>
+        <div class="price">₹2999.99</div><a href="product.html" class="btn">Buy Now</a>
       </div>
     </div>
     <div class="product-card">
