--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         <h3>Led Mirror</h3>
         <p>Condition: Good</p>
         <div class="price">₹1999.99</div>
-        <a href="https://wa.me/9871486231?text=I%20am%20interested%20in%20Led%20Mirror%20from%20Glowsy%20Galaxy%20Shop"
+        <a href="https://wa.me/?text=I%20am%20interested%20in%20Led%20Mirror%20from%20Glowsy%20Galaxy%20Shop"
            class="btn">Buy Now</a>
       </div>
     </div>
@@ -373,7 +373,7 @@
         <h3>LED Mirror 1.0</h3>
         <p>Condition: Like New</p>
         <div class="price">₹1599.99</div>
-        <a href="https://wa.me/9871486231?text=I%20am%20interested%20in%20LED%20Mirror%201.0%20from%20Glowsy%20Galaxy%20Shop"
+        <a href="https://wa.me/?text=I%20am%20interested%20in%20LED%20Mirror%201.0%20from%20Glowsy%20Galaxy%20Shop"
            class="btn">Buy Now</a>
       </div>
     </div>
